tests/golden/type_errors/match_expression_non_exhaustive.err
Type error at 3:13: non-exhaustive match: missing Result.Empty
  let label = match result {
              ^
